--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     // We've defined Cash as a dependent CorDapp as an example.
     cordapp project(":cordapp")
     cordapp project(":cordapp-contracts-states")
+    cordapp project(":oracle")
     cordapp "$corda_release_group:corda-finance:$corda_release_version"
 }
 
