--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,15 @@ buildscript {
         classpath "net.corda.plugins:cordapp:$corda_gradle_plugins_version"
         classpath "net.corda.plugins:cordformation:$corda_gradle_plugins_version"
         classpath "net.corda.plugins:quasar-utils:$corda_gradle_plugins_version"
+        compile 'com.github.kittinunf.fuel:fuel:<latest-version>' //for JVM
+        compile 'com.github.kittinunf.fuel:fuel-android:<latest-version>' //for Android
+        compile 'com.github.kittinunf.fuel:fuel-livedata:<latest-version>' //for LiveData support
+        compile 'com.github.kittinunf.fuel:fuel-rxjava:<latest-version>' //for RxJava support
+        compile 'com.github.kittinunf.fuel:fuel-coroutines:<latest-version>' //for Kotlin Coroutines support
+        compile 'com.github.kittinunf.fuel:fuel-gson:<latest-version>' //for Gson support
+        compile 'com.github.kittinunf.fuel:fuel-jackson:<latest-version>' //for Jackson support
+        compile 'com.github.kittinunf.fuel:fuel-moshi:<latest-version>' //for Moshi support
+        compile 'com.github.kittinunf.fuel:fuel-forge:<latest-version>' //for Forge support
     }
 }
 
